# anders-chess-bot

./: .gitignore  CMakeLists.txt  Makefile  dom.js  glue.js  index.html  index.js  style.css  todo
AndersChessBot/: CMakeLists.txt
AndersChessBot/src/AndersChessBot/Book/: Book.cpp  Book.hpp
AndersChessBot/src/AndersChessBot/Chess/: Core.cpp  Core.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Perft.cpp  Perft.hpp  Position.cpp  Position.hpp  PreCalculated.cpp  PreCalculated.hpp  Zobrist.cpp  Zobrist.hpp
AndersChessBot/src/AndersChessBot/Chess/magicmoves/: magicmoves.c  magicmoves.h
AndersChessBot/src/AndersChessBot/Engine/: Engine.cpp  Engine.hpp
AndersChessBot/src/AndersChessBot/Protocol/: AddToMoveList.hpp  Protocol.cpp  Protocol.hpp  State.hpp
CLI/: CMakeLists.txt
CLI/src/: main.cpp
Source/: Main.cpp
Source/Book/: Book.cpp  Book.hpp
Source/Chess/: Core.cpp  Core.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Perft.cpp  Perft.hpp  Position.cpp  Position.hpp  PreCalculated.cpp  PreCalculated.hpp  Zobrist.cpp  Zobrist.hpp
Source/Dom/: Dom.cpp  Dom.hpp
Source/Engine/: Engine.cpp  Engine.hpp
Source/Glue/: Glue.cpp  Glue.hpp
Wasm/: Main.cpp
Wasm/Book_cpy/: Book.cpp  Book.hpp
Wasm/Dom/: Dom.cpp  Dom.hpp
Wasm/Glue/: Glue.cpp  Glue.hpp
